--- a/style.css
+++ b/style.css
@@ -34,3 +34,8 @@ a:link, a:visited {
     margin-left: auto;
     margin-right: auto;
 }
+
+.col-md-4 {
+    display:table-cell;
+    vertical-align: middle;
+}
