--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 /*
 TODO:
-
+    add banner, separate sections, make sure clicking tabs at top directs to section
 */
 
 body {
@@ -13,12 +13,18 @@ body {
     background-position: center;
 }
 
-h1, h2, h3, a, p, .page-header {
+h1,
+h2,
+h3,
+a,
+p,
+.page-header {
     color: whitesmoke;
     font-family: 'Raleway', sans-serif;
 }
 
-a:link, a:visited {
+a:link,
+a:visited {
     color: whitesmoke;
     text-decoration: underline;
 }
@@ -36,6 +42,6 @@ a:link, a:visited {
 }
 
 .col-md-4 {
-    display:table-cell;
+    display: table-cell;
     vertical-align: middle;
 }
