Added email button on navbar

--- a/style.css
+++ b/style.css
@@ -1,6 +1,7 @@
 /*
 TODO:
     add banner, separate sections, make sure clicking tabs at top directs to section
+    finalize title, change icon
 */
 
 body {
