--- a/style.css
+++ b/style.css
@@ -26,7 +26,7 @@ a,
 p {
     color: whitesmoke;
     font-family: 'Raleway', sans-serif;
-    font-size: 16px;
+    font-size: 18px;
 }
 
 a:link {
@@ -42,6 +42,10 @@ a:visited {
     color: white;
     font-family: 'Raleway', sans-serif;
     font-size: 300%;
+}
+
+.page-header {
+    padding-top: 20px;
 }
 
 .img-main {
