--- a/style.css
+++ b/style.css
@@ -7,6 +7,7 @@ TODO:
 body {
     padding-top: 55px;
     padding-bottom: 50px;
+    background-color: dimgray;
     background-image: url(img/background3.png);
     background-attachment: fixed;
     background-repeat: no-repeat;
